--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-image: url("https://t4.ftcdn.net/jpg/03/16/76/45/360_F_316764544_Q41R8DGQXRyrkFSlA7MDLRDKAdCKH5tX.jpg");
+  /* background-image: url("https://t4.ftcdn.net/jpg/03/16/76/45/360_F_316764544_Q41R8DGQXRyrkFSlA7MDLRDKAdCKH5tX.jpg"); */
 }
 
 .CardContainer {
@@ -26,17 +26,19 @@ body {
 
 #leftmenu {
   position: fixed;
-  top: 11%;
+  top: 0;
   left: 0;
-  width: 40%;
+  width: 60%;
   height: 100%;
 }
 
 #maincontent {
   float: right;
   left: 30%;
-  width: 60%;
+  width: 40%;
   height: 100%;
+  background-color: white;
+  background-image: none;
 }
 .jumbotron {
   background-image: url("https://png.pngtree.com/thumb_back/fh260/back_our/20190619/ourmid/pngtree-travel-around-the-world-travel-poster-template-image_140335.jpg");
